--- a/Maze Generation/index.html
+++ b/Maze Generation/index.html
@@ -5,22 +5,11 @@
        <meta charset= "UTF-8"/>
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Maze</title> 
-       <style>
-        * { padding: 0; margin: 0; }
-        #heading {
-            text-align: center;
-            margin-top: 15px;
-            margin-bottom: 15px;
-            font-size: xx-large;
-        }
-        #heading{ margin: 0 auto}
-        #canvas { background: #99afa3; display: block; margin: 0 auto; }
-        #c { background: #eeeeee; display: block; margin: 0 auto; }
-        #timerel { background: #eeeeee; display: block; margin: 0 auto; }
-    </style>
+       <!--<link rel="stylesheet" href="style.css">-->
     <body>
-        <canvas class="maze"></canvas> 
-
+        <div style = "text-align:center;">
+            <canvas class="maze"></canvas> 
+        </div>
         <script src="mazeGame.js"></script>
     </body>
 </head> 
